--- a/package.json
+++ b/package.json
@@ -7,15 +7,17 @@
   "author": "Chiron <qkfltp01@naver.com>",
   "license": "MIT",
   "dependencies": {
+    "@babel/core": "^7.7.7",
+    "@babel/preset-env": "^7.7.7",
     "babel-cli": "^6.26.0",
     "babel-node": "^0.0.1-security",
+    "dotenv": "^8.2.0",
     "graphql-yoga": "^1.18.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
   },
   "scripts": {
-    "dev" : "nodemon --exec babel-node src/server.js"
+    "dev": "nodemon --exec babel-node src/server.js"
   }
-  
 }
