--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
   "license": "MIT",
   "dependencies": {
     "@babel/core": "^7.7.7",
+    "@babel/node": "^7.7.7",
     "@babel/preset-env": "^7.7.7",
-    "babel-cli": "^6.26.0",
     "babel-node": "^0.0.1-security",
     "dotenv": "^8.2.0",
-    "graphql-yoga": "^1.18.3"
+    "graphql-yoga": "^1.18.3",
+    "yarn": "^1.21.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
