--- a/package.json
+++ b/package.json
@@ -7,18 +7,23 @@
   "author": "Chiron <qkfltp01@naver.com>",
   "license": "MIT",
   "dependencies": {
-    "@babel/core": "^7.7.7",
+    "@babel/core": "^7.8.0",
     "@babel/node": "^7.7.7",
     "@babel/preset-env": "^7.7.7",
     "babel-node": "^0.0.1-security",
     "dotenv": "^8.2.0",
+    "graphql-tools": "^4.0.6",
     "graphql-yoga": "^1.18.3",
+    "merge-graphql-schemas": "^1.7.6",
+    "morgan": "^1.9.1",
+    "remove": "^0.1.5",
     "yarn": "^1.21.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
   },
   "scripts": {
+    "deploy" : "prisma deploy",
     "dev": "nodemon --exec babel-node src/server.js"
   }
 }
