--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "graphql-yoga": "^1.18.3",
     "merge-graphql-schemas": "^1.7.6",
     "morgan": "^1.9.1",
+    "nodemailer": "^6.4.2",
+    "nodemailer-sendgrid-transport": "^0.2.0",
+    "prisma-client-lib": "^1.34.10",
     "remove": "^0.1.5",
     "yarn": "^1.21.1"
   },
@@ -23,9 +26,9 @@
     "nodemon": "^2.0.2"
   },
   "scripts": {
-    "deploy" : "prisma deploy",
+    "deploy": "prisma deploy",
     "dev": "nodemon --exec babel-node src/server.js",
     "generate": "prisma generate",
-    "do": "yarn run deploy && yarn run generate",
+    "do": "yarn run deploy && yarn run generate"
   }
 }
