--- a/package.json
+++ b/package.json
@@ -1,34 +1,33 @@
 {
   "name": "prismagram",
   "version": "1.0.0",
-  "description": "Instagram clone with Express + Prisma + React and React Native",
-  "main": "index.js",
-  "repository": "https://github.com/Barise/prismagram.git",
-  "author": "Chiron <qkfltp01@naver.com>",
+  "description": "Instragram clone with Express + Prisma + React and React Native",
+  "repository": "https://github.com/nomadcoders/prismagram",
+  "author": "Nicolás Serrano Arévalo <itnico.las.me@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "@babel/core": "^7.8.0",
-    "@babel/node": "^7.7.7",
-    "@babel/preset-env": "^7.7.7",
-    "babel-node": "^0.0.1-security",
-    "dotenv": "^8.2.0",
-    "graphql-tools": "^4.0.6",
-    "graphql-yoga": "^1.18.3",
-    "merge-graphql-schemas": "^1.7.6",
+    "@babel/core": "^7.2.2",
+    "@babel/node": "^7.2.2",
+    "@babel/preset-env": "^7.3.1",
+    "dotenv": "^6.2.0",
+    "graphql-tools": "^4.0.4",
+    "graphql-yoga": "^1.17.4",
+    "jsonwebtoken": "^8.4.0",
+    "merge-graphql-schemas": "^1.5.8",
     "morgan": "^1.9.1",
-    "nodemailer": "^6.4.2",
+    "nodemailer": "^5.1.1",
     "nodemailer-sendgrid-transport": "^0.2.0",
-    "prisma-client-lib": "^1.34.10",
-    "remove": "^0.1.5",
-    "yarn": "^1.21.1"
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
+    "prisma-client-lib": "^1.26.4"
   },
   "devDependencies": {
-    "nodemon": "^2.0.2"
+    "nodemon": "^1.18.10"
   },
   "scripts": {
     "deploy": "prisma deploy",
-    "dev": "nodemon --exec babel-node src/server.js",
     "generate": "prisma generate",
-    "do": "yarn run deploy && yarn run generate"
+    "do": "yarn run deploy && yarn run generate",
+    "dev": "nodemon --exec babel-node src/server.js"
   }
 }
